--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-tournament-chart",
   "version": "0.1.0",
   "private": true,
+  "Home": "blueclay.github.io/react-tournament-chart",
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
@@ -18,6 +19,8 @@
 	"start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
