Add docs folder

--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "private": true,
   "Home": "https://blueclay.github.io/react-tournament-chart/",
   "dependencies": {
+    "gh-pages": "^1.2.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
-	"node-sass-chokidar": "0.0.3",
+    "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.0.2",
     "react-scripts": "1.0.10"
   },
   "scripts": {
-	"build-css": "node-sass-chokidar src/ -o src/",
+    "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
-	"start": "npm-run-all -p watch-css start-js",
+    "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "predeploy": "npm run build",
