--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-tournament-chart",
   "version": "0.1.0",
   "private": true,
-  "Home": "https://blueclay.github.io/react-tournament-chart/",
+  "homepage": "https://blueclay.github.io/react-tournament-chart/",
   "dependencies": {
     "gh-pages": "^1.2.0",
     "react": "^15.6.1",
